# news-personalization

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  todo.txt
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/versions/: 0001_baseline.py  0002_removed_at_timestamptz.py  0003_user_delivery_webhook_url.py  0004_llm_usage.py  0005_subscription_paused_at.py  0006_subscription_title.py  0b3e8f9c7a11_add_subscription_query_embeddings.py  3b7d5f2a91c4_add_user_timezone.py  41d9fef8f3a8_add_subscription_sources_table.py  53a0c695cb2a_add_short_label_to_subscriptions.py  5a1b71e42001_add_last_digest_scheduled_at.py  79205137a13b_initial_schema.py  7c4f6f5d8e21_remove_label_fields_add_prompt_summaries.py  7d2fe63af1fd_drop_event_matching_mode_and_event_.py  9f31d4a2b6c0_add_digest_language_to_subscriptions.py  a1b2c3d4e5f6_add_last_embedding_update_at.py  a1b2c3d4e5f6_rename_rss_feeds_to_sources.py  a8b9c0d1e2f3_add_user_language.py  a8f2e3b1c4d5_add_user_spec_and_conversation_summary.py  b24ba0c4180a_drop_event_columns_from_news_items.py  b2c3d4e5f6a7_drop_raw_prompt_embedding.py  b9c0d1e2f3a4_add_user_has_onboarded.py  b9c3d4e5f6a7_add_topic_embedding_to_subscriptions.py  bad8baaa0487_add_subscription_source_stats_columns.py  c0d1e2f3a4b5_drop_subscription_legacy_fields.py  c3bb4f1a0e66_make_subscription_schedule_optional.py  c4d5e6f7a8b9_add_pipeline_events_and_evaluation.py  cc2e4b7a11d5_add_canonical_prompt_to_subscriptions.py  d5e6f7a8b9c0_remove_legacy_fields_add_failed_tasks.py  d62e4e1b6f7a_add_event_subscriptions.py  e6f7a8b9c0d1_update_evaluation_result_scoring_criteria.py  f1c7b1d3a8e2_add_event_matching_constraints.py  f7a8b9c0d1e2_add_reflector_and_source_removal.py
backend/src/news_service/: app.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  helpers.py  test_alembic_migration.py  test_article_fetcher.py  test_celery_broker_wiring.py  test_conversation_state_redis.py  test_digest_candidates_late_fetched.py  test_digest_scheduler.py  test_event_notifications.py  test_poll_pipeline.py  test_recent_events_api.py  test_reddit_subreddit_subscription.py  test_send_now_api.py  test_subscription_edit_api.py  test_subscription_parse_api.py  test_subscription_sources_lifecycle.py  test_telegram_channel_subscription.py  test_twitter_account_subscription.py  test_update_subscription_api.py  test_user_registration_flow.py  test_user_timezone_api.py  test_webhook_delivery_contract.py
backend/tests/unit/: test_adk_runner_history.py  test_admin_alerts.py  test_celery_app.py  test_config.py  test_contribution_streak_update.py  test_conversational_agent.py  test_coverage.py  test_deliver_digest.py  test_deliver_events.py  test_deliver_events_judge_loop.py  test_digest.py  test_digest_curator.py  test_digest_writer.py  test_discover_sources_task.py  test_discovery.py  test_event.py  test_event_judge.py  test_event_notifications_dedup.py  test_event_notifications_service.py  test_event_verifier.py  test_finder_status.py  test_guardrails.py  test_llm_retry.py  test_parser.py  test_pipeline_error_handling.py  test_poll_adapters.py  test_poll_feeds.py  test_poll_feeds_reddit.py  test_poll_feeds_telegram.py  test_poll_feeds_twitter.py  test_prompt_summaries.py  test_provider_errors.py  test_reddit_service.py  test_reflect_events.py  test_reflector_tools.py  test_relevance.py  test_routes_conversations.py  test_routes_users.py  test_schedule_digests.py  test_schedule_parser.py  (+20 more)
benchmark/: .env.example  .gitignore  README.md  pyproject.toml  run_parallel.sh
benchmark/data/corpus/: event_bodies.json  search_digest.json  search_event.json
benchmark/economics/: REPRODUCING.md  constants.py  prompts.py  run_baseline.py
benchmark/economics/results/: e2e_7day_correctness_1ebf9ca6.json
benchmark/scripts/: diploma_metrics.py  gen_v3_banks.py  prime_and_regen_derived.sh  regen_v3_fabric.sh  rescore_digests.py
benchmark/src/news_benchmark/: __init__.py  clock.py  config.py  cost_ledger.py  db.py  orchestrator.py  redis_ns.py  run.py  scheduler.py  simulator.py  tagging.py
benchmark/tests/: conftest.py
benchmark/tests/integration/: _digest_common.py  _e2e_month_corpus.py  _reflector_common.py  test_s_conv.py  test_s_conv_close_scenario_fires.py  test_s_conv_close_scenario_stays_silent.py  test_s_conv_feedback_rewrites_spec.py  test_s_conv_trigger_digest_now.py  test_s_conv_trigger_source_discovery.py  test_s_conv_update_digest_language.py  test_s_conv_update_topic.py  test_s_digest_happy.py  test_s_digest_revise.py  test_s_digest_writer_fetch_page.py  test_s_digest_writer_search_web.py  test_s_discovery_dedupes_across_finders.py  test_s_discovery_empty_pool.py  test_s_discovery_excludes_attached.py  test_s_discovery_happy_path.py  test_s_discovery_inspect_then_submit.py  test_s_discovery_reuses_existing_source.py  test_s_e2e_7day_correctness.py  test_s_e2e_month.py  test_s_e2e_month_staleness_preflight.py  test_s_embedder_drift.py  test_s_event_assess.py  test_s_event_judge_drop_after_max.py  test_s_event_judge_revise_loop.py  test_s_judge_digest_scoring.py  test_s_judge_event_per_item.py  test_s_parallel_discovery_smoke.py  test_s_reflector_drift.py  test_s_reflector_format_spec_fix.py  test_s_reflector_revise_max.py  test_s_reflector_staleness.py  test_s_reflector_streak.py  test_s_verifier.py  test_s_verifier_assessor_miss.py  test_s_verifier_coverage_gap.py  test_smoke_single_onboard.py
tgbot/: .env.example  Dockerfile  README.md  pyproject.toml
tgbot/src/tgbot/: __main__.py  bot.py  client.py  (+9 more)
tgbot/tests/: conftest.py
(+251 files in other folders)
