[project]
name = "news-service"
version = "0.1.0"
description = "Personalized news digest service powered by LLM agents and RSS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "openai>=1.60.0",
    "feedparser>=6.0.11",
    "pydantic-settings>=2.7.0",
    "alembic>=1.14.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "selenium>=4.34.0",
    "geonamescache>=3.0.0",
    "openai-agents>=0.12.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/news_service"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
